icons oon view elements of the project modified

--- a/Qemer_POS/public/css/custom.css
+++ b/Qemer_POS/public/css/custom.css
@@ -540,3 +540,14 @@ body{
 .warning:hover{
       color: #fff;
     }
+.icon-green{
+    color: green;
+}
+
+.icon-red{
+    color: red;
+}
+
+.icon-blue{
+    color: blue;
+}
