--- a/Qemer_POS/public/css/custom.css
+++ b/Qemer_POS/public/css/custom.css
@@ -700,6 +700,14 @@ body{
 
 }
 
+/* .round-input{
+    border-radius: 10rem;
+    height: auto;
+    width: 100%;
+    font-size: 0.8rem;
+    padding: 0.7rem;
+} */
+
 /* @media only screen and (min-width: 768px) {
 
     .solo{
