added admin-lte to the project

--- a/Qemer_POS/resources/sass/app.scss
+++ b/Qemer_POS/resources/sass/app.scss
@@ -7,3 +7,8 @@
 // Bootstrap
 @import '~bootstrap/scss/bootstrap';
 @import "~bootstrap-icons/font/bootstrap-icons.css";
+
+// aDMIN LTE
+
+@import '~admin-lte/dist/css/adminlte.css'
+
