--- a/Qemer_POS/resources/sass/app.scss
+++ b/Qemer_POS/resources/sass/app.scss
@@ -10,5 +10,6 @@
 
 // aDMIN LTE
 
-@import '~admin-lte/dist/css/adminlte.css'
+@import '~admin-lte/dist/css/adminlte.css';
 
+// @import "~sweetalert2";
